// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoinSelection renders correctly 1`] = `
<View
  style={
    [
      {
        "height": "100%",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 6,
          "paddingBottom": 4,
          "paddingTop": 4,
        },
        undefined,
        {
          "backgroundColor": "#FFF9F6",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
            "justifyContent": "flex-start",
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 26,
                },
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 32,
                },
                {
                  "color": "#2B1911",
                },
                {
                  "flexShrink": 1,
                },
              ],
              false,
            ]
          }
        >
          select coins to send
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessibilityHint="help"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
        >
          <test-file-stub
            fill="#099DE2"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "paddingBottom": 16,
          "paddingTop": 16,
        },
        {
          "paddingBottom": 32,
          "paddingTop": 32,
        },
      ]
    }
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flexGrow": 1,
            "gap": 16,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 12,
              "paddingLeft": 8,
              "paddingRight": 8,
            }
          }
        >
          <View
            style={
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  undefined,
                  {
                    "justifyContent": "center",
                  },
                  {
                    "height": 13,
                    "width": 179,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                      "marginBottom": -40,
                      "marginTop": -40,
                    },
                    {
                      "gap": 2,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      {
                        "height": 20,
                        "width": 20,
                      },
                    ]
                  }
                >
                  <test-file-stub
                    fill="#888"
                    style={
                      [
                        {
                          "height": 24,
                          "width": 24,
                        },
                        {
                          "height": 15,
                          "width": 15,
                        },
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "flexDirection": "row",
                      },
                      {
                        "alignItems": "baseline",
                      },
                      {
                        "gap": 3,
                        "paddingTop": 4,
                      },
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        false,
                      ]
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B19111A",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B19111A",
                              "letterSpacing": -4.62,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      .
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B19111A",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B19111A",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B19111A",
                              "letterSpacing": -7.699999999999999,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                       
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B19111A",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B1911",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      1
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B1911",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B1911",
                              "letterSpacing": -7.699999999999999,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                       
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B1911",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B1911",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            [
                              {
                                "alignItems": "center",
                                "fontFamily": "CourierPrime-Bold",
                                "textAlign": "center",
                              },
                              {
                                "fontSize": 22,
                                "lineHeight": 29,
                              },
                            ],
                            {
                              "color": "#2B1911",
                              "letterSpacing": -1.65,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      0
                    </Text>
                  </Text>
                  <View
                    style={
                      {
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "fontFamily": "Baloo2-Medium",
                            },
                            false,
                            {
                              "fontSize": 16,
                              "lineHeight": 24,
                              "paddingBottom": 2,
                            },
                          ],
                          false,
                        ]
                      }
                    >
                      sats
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  {
                    "color": "#7D675E",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 20,
                  },
                  false,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    false,
                  ]
                }
              >
                addressLabel ‑ 
              </Text>
              address
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "opacity": 1,
              }
            }
            testID="checkbox"
          >
            <test-file-stub
              fill="#9F8C82"
              style={
                [
                  {
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#F56522",
        "borderColor": undefined,
        "borderRadius": 9999,
        "flexDirection": "row",
        "gap": 8,
        "height": 40,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 32,
        "paddingRight": 32,
      }
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 13,
              "letterSpacing": 0.47,
              "lineHeight": 22,
              "textTransform": "uppercase",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 15,
              "letterSpacing": 0.54,
              "lineHeight": 26,
              "textTransform": "uppercase",
            },
            {
              "color": "#FFFCFA",
            },
          ],
          false,
        ]
      }
    >
      confirm
    </Text>
  </View>
</View>
`;

exports[`CoinSelection renders correctly while loading 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "gap": 32,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "paddingRight": 6,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/assets/animated/bitcoin.gif",
        }
      }
      style={
        {
          "height": 128,
          "width": 128,
        }
      }
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
          "textAlign": "center",
        },
        false,
      ]
    }
  >
    loading...
  </Text>
</View>
`;

exports[`CoinSelection selects coins 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -844,11 +844,11 @@
                }
              }
              testID="checkbox"
            >
              <test-file-stub
-               fill="#9F8C82"
+               fill="#F56522"
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,"
`;

exports[`CoinSelection should open the help popup when the help icon is pressed 1`] = `
<View
  style={
    {
      "borderRadius": 16,
      "marginLeft": 24,
      "marginRight": 24,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "stretch",
          "backgroundColor": "#FEEDE5",
          "gap": 12,
          "paddingBottom": 24,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 16,
        },
        [
          {
            "backgroundColor": "#D7F2FE",
          },
          {
            "alignItems": "stretch",
          },
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
            "width": "100%",
          },
          false,
        ]
      }
    >
      coin control
    </Text>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          undefined,
          false,
        ]
      }
    >
      In this screen you can select which coins you want your transaction to use. This can be useful when trying to keep coins from different sources separate, for example.
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#F56522",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "backgroundColor": "#099DE2",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "gap": 4,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        }
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#FFFCFA",
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              undefined,
            ],
            false,
          ]
        }
      >
        help
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "flexGrow": 1,
          "gap": 4,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        }
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#FFFCFA",
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              undefined,
            ],
            false,
          ]
        }
      >
        close
      </Text>
    </View>
  </View>
</View>
`;
